--- a/introducao-javascript/css/index.css
+++ b/introducao-javascript/css/index.css
@@ -140,3 +140,18 @@ background-color: lightcoral;
 #mensagens-erro {
 	color: red;
 }
+
+.fadeOut {
+	opacity: 0;
+	transition: 0.5s;
+}
+
+#filtrar-tabela {
+	width: 200px;
+	height: 35px;
+	margin-bottom: 10px;
+}
+
+.invisivel {
+	display: none;
+}
